Don't set mNeedsRefreshes to false when we get two refreshes at the same time stamp.  (Bug 651456)  r=bzbarsky